# tx-pkg-misc

./: .bazelrc  .bazelversion  .clang-format  .clang-tidy  .dev.bazelrc  .gitignore  .gitmodules  .lldb  .lldbinit  .user.bazelrc  MODULE.bazel  README.md  REPO.bazel  imgui.ini  replace_symlink.py  uni.bazelrc
data/: BUILD.bazel
demo/hello-aux/: BUILD.bazel
demo/hello-coro/: main.cpp
demo/hello-im/: BUILD.bazel  Console.cpp  Console.h  main.cpp
demo/hello-im/Console/: ConsoleBuffer.h  QuakeConsole.cpp  QuakeConsole.h
demo/hello-im/Console/Detail/: ConsoleSink.h
demo/hello-pkg/: BUILD.bazel  main.cpp
demo/hello-sdl/: BUILD.bazel  FpsCounter.cpp  FpsCounter.h  Sdl3Looper.cpp  Sdl3Looper.h  main.cpp
demo/hello/aux/: BUILD.bazel
demo/hello/im/: BUILD.bazel  main.cpp
demo/hello/sdl/: BUILD.bazel  main.cpp
demo/mix/ipeer/: .env  BUILD.bazel  ControlPanel.h  DemoHandler.h  Peer.h  PeerLink.h  PeerManager.h  PeerNode.h  PeerWindow.h  Protocol.h  TransportFactory.h  main.cpp
demo/mix/peerlab/: BUILD.bazel  ControlPanel.h  DemoHandler.h  Peer.h  PeerManager.h  PeerNode.h  PeerWindow.h  TransportFactory.h  main.cpp
demo/pkg/: README.md
demo/pkg/aux/: BUILD.bazel  main.cpp
demo/pkg/im/: BUILD.bazel  main.cpp
demo/pkg/sdl/: BUILD.bazel  main.cpp
demo/try/: README.md
demo/try-asio/: main.cpp
demo/try-http-nghttp2/: BUILD.bazel  Http1Client.cpp  Http1Client.h  Http2Client.cpp  Http2Client.h  SocketCompat.h  main.cpp
demo/try-http-wasm-fetch/: BUILD.bazel
demo/try-imgui-1/: BUILD.bazel  main.cpp
demo/try-imgui-2/: BUILD.bazel  main.cpp
demo/try-sdl3-1st/: BUILD.bazel  main.cpp
demo/try-sdl3-2nd/: BUILD.bazel  main.cpp
demo/try/imgui-1/: AndroidManifest.xml  BUILD.bazel  TryActivity.java  main.cpp
demo/try/sdl3-1/: AndroidManifest.xml  BUILD.bazel  TryActivity.java  droid_sdl_main_glue.cpp  main.cpp
demo/try/sdl3-1/lib/: BUILD.bazel
demo/try/sdl3-2/: BUILD.bazel  main.cpp
demo/try/sdl3-lib/: AndroidManifest.xml  BUILD.bazel  TryActivity.java  sdl_droid_glue.cc
patches/: BUILD.bazel  generate_patch.sh  sdl3.patch
patches/sdl3/source/: BUILD.bazel
pkg/imgui/: BUILD.bazel
pkg/imgui/Im/: Deputy.cpp  Deputy.h
pkg/imgui/Im/Console/: QuakeConsole.cpp  QuakeConsole.h
pkg/sdl/: BUILD.bazel  SdlDroidActivity.java  sdl_glue.cc
pkg/sdl/Sdl/Loop/: Sdl3Runner.cpp  Sdl3Runner.h
pkg/sdl/java/res/values/: styles.xml
repo/: BUILD.bazel  sdl3.BUILD.bazel
src/pkg-imgui/: BUILD.bazel  embedded.bzl
src/pkg-imgui/Im/: Deputy.cpp  Deputy.h
src/pkg-imgui/Im/Console/: QuakeConsole.cpp  QuakeConsole.h
src/pkg-imgui/Im/Console/Detail/: ConsoleBuffer.h  ConsoleSink.h
src/pkg-sdl/: AndroidManifest.xml  BUILD.bazel  SdlDroidActivity.java  sdl_droid_glue.cc
src/pkg-sdl/Sdl/: RendererScopes.h  Sdl3Ptr.h
src/pkg-sdl/Sdl/Loop/: Sdl3Looper.cpp  Sdl3Looper.h  Sdl3Runner.cpp  Sdl3Runner.h
src/pkg/imgui/: BUILD.bazel
src/pkg/imgui/Im/: Deputy.cpp  Deputy.h
src/pkg/sdl/: AndroidManifest.xml  BUILD.bazel  sdl_glue.cc
test/: BUILD.bazel  CoroTest.h
uni/: .clang-tidy  README.md  dev.bazelrc  uni.bazelrc
uni/.lldb/: init_bazel_target.py
