"""Misc targets package"""

module(
    name = "tx-pkg-misc",
    version = "0.0.0",
)

#TODO: setup Renovate to auto-update https://github.com/renovatebot/renovate
bazel_dep(name = "apple_support", version = "2.1.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "emsdk", version = "4.0.17")

# Hedron's Compile Commands Extractor for Bazel
# - https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    # Using forked version to workaround an issue w/ header-only library https://github.com/hedronvision/bazel-compile-commands-extractor/issues/199
    #commit = "abb61a688167623088f8768cc9264798df6a9d10",
    #remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "359a657680aa74d2a70240bb310c1636601e0af8",
    remote = "https://github.com/vimarsh6739/bazel-compile-commands-extractor.git",
)

# tx useful rules and tools
bazel_dep(name = "tx-kit-ext")  # not published in private registry yet
git_override(
    module_name = "tx-kit-ext",
    remote = "https://github.com/nick-dodonov/tx-kit-ext.git",
    tag = "v/0.2.1",
)

# demo/test deps
bazel_dep(name = "tx-pkg-aux")  # not published in private registry yet
git_override(
    module_name = "tx-pkg-aux",
    remote = "https://github.com/nick-dodonov/tx-pkg-aux.git",
    tag = "v/0.2.0",
    verbose = True,
)

bazel_dep(name = "boost.asio", version = "1.89.0.bcr.1.1-tx.1")  # private registry
bazel_dep(name = "boringssl", version = "0.20251124.0")
bazel_dep(name = "nghttp2", version = "1.65.0")
bazel_dep(name = "openssl", version = "3.5.4.bcr.0")
bazel_dep(name = "sdl3", version = "3.4.0-tx.1")  # private registry
bazel_dep(name = "imgui", version = "1.92.5-docking-tx.1")  # private registry

# test deps
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
